--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  overflow: hidden;
+}
+#root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.app-inline {
+  display: flex;
+  flex-direction: row;
+}
+.app-container {
+  background-image: linear-gradient(135deg, rgba(45, 45, 45), rgba(20, 20, 20));
+  border-radius: 15px;
+  height: calc(100vh - 5px);
+  width: calc(100vw - 5px);
+  box-shadow: 0 0 3px 0 rgba(30, 30, 30, 0.35);
+}
+.app-navigation {
+  position: fixed;
+  right: 0;
+  top: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding: 20px;
+  -webkit-app-region: drag;
+  width: 100vw;
+}
+.app-dragable {
+  width: 100%;
+  height: 45px;
+}
+.app-buttons {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  z-index: 100;
+}
+.app-navigation-button {
+  -webkit-app-region: none;
+  position: relative;
+  z-index: 10;
+  color: rgba(20, 20, 20);
+  background-color: white;
+  border-radius: 50%;
+  padding: 2px;
+  border: 1px solid white;
+  transition: background-color 150ms, color 150ms;
+}
+.app-navigation-button:hover {
+  background-color: rgba(255, 255, 255, 0);
+  color: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.gap-5 {
+  gap: 5px;
 }
